# LandXML2glTF

./: .gitignore  LICENSE  README.md  XMLAddShellMenuCommand.reg
.github/: FUNDING.yml
LandXML2glTF/: CMakeLists.txt  LandXML2GLTF Converter.aip  LandXML2glTF.sln  convertFiles.cmd
LandXML2glTF/LXML2glTF/: CMakeLists.txt  LXML2glTF.cpp  LXML2glTF.vcxproj  LXML2glTF.vcxproj.filters
LandXML2glTF/LXML2glTF/Source/: LXML2glTF.cpp
LandXML2glTF/LXML2glTF/data/: DefaultTexture.xml
LandXML2glTF/LXML2glTF/int/x64/Debug/: LXML2glTF.exe.recipe  LXML2glTF.ilk  vc143.idb
LandXML2glTF/LXML2glTF/int/x64/Debug/LXML2glTF.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  LXML2glTF.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LandXML2glTF/LXML2glTF/int/x64/Release/: LXML2glTF.exe.recipe  LXML2glTF.iobj  LXML2glTF.ipdb
LandXML2glTF/LXML2glTF/int/x64/Release/LXML2glTF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LXML2glTF.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LandXML2glTF/LXML2glTF_CGI/: CMakeLists.txt
LandXML2glTF/LXML2glTF_CGI/Source/: LXML2glTF_CGI.cpp
LandXML2glTF/LandXML/: DefaultTexture.xml  KYRoad.gltf  polyline.gltf  polyline.xml  subdivision.xml
LandXML2glTF/LandXML/KYRoad/: KYRoad.gltf  kyroad.glb  kyroad.gltf
LandXML2glTF/LandXML/Olympus/: olympus-new.gltf  olympus-new.xml
LandXML2glTF/LandXML/Partridge/: Partridge_Survey.gltf  Partridge_Survey.xml
LandXML2glTF/LandXML/subdivision/: subdivision.gltf
LandXML2glTF/LandXML/subdivision-2.0/: subdivision-2.0.gltf  subdivision-2.0.xml
LandXML2glTF/LandXML2glTF/: LandXML2glTF.vcxproj
LandXML2glTF/LandXML2glTFDll/: CMakeLists.txt  LandXML.h  LandXML2glTFDll - Copy.vcxproj  LandXML2glTFDll.vcxproj  LandXML2glTFDll.vcxproj.filters
LandXML2glTF/LandXML2glTFDll/Inc/: LandXML.h  LandXML2glTFDll.h  LandXMLModel.h  LandXMLModel2glTF.h  framework.h
LandXML2glTF/LandXML2glTFDll/Inc/Helpers/: LXParserHelper.h  MathHelper.h
LandXML2glTF/LandXML2glTFDll/Inc/Models/: GLTFModel.h  LandXML.h
LandXML2glTF/LandXML2glTFDll/Inc/Readers/: LXParser.h
LandXML2glTF/LandXML2glTFDll/Inc/Writers/: GLTFWriter.h
LandXML2glTF/LandXML2glTFDll/Source/: LandXML2glTFDll.cpp  LandXMLModel2glTF.cpp
LandXML2glTF/LandXML2glTFDll/Source/Helpers/: MathHelper.cpp
LandXML2glTF/LandXML2glTFDll/Source/Models/: LandXML.cpp
LandXML2glTF/LandXML2glTFDll/Source/Readers/: LXParser.cpp
LandXML2glTF/LandXML2glTFDll/int/x64/Debug/: LandXML2glTFDll.dll.recipe  LandXML2glTFDll.ilk  LandXML2glTFDll.vcxproj.FileListAbsolute.txt  LandXML2glTFDllD.dll.recipe  lxparserhelper.obj.enc  priconfig.xml  vc143.idb
LandXML2glTF/LandXML2glTFDll/int/x64/Debug/LandXML2glTFDll.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LandXML2glTFDll.lastbuildstate  LandXML2glTFDll.read.1u.tlog  LandXML2glTFDll.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
LandXML2glTF/LandXML2glTFDll/int/x64/Release/: LandXML2glTFDll.dll.recipe  LandXML2glTFDll.ipdb  LandXML2glTFDll.vcxproj.FileListAbsolute.txt  priconfig.xml.intermediate
LandXML2glTF/LandXML2glTFDll/int/x64/Release/LandXML2glTFDll.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LandXML2glTFDll.lastbuildstate  LandXML2glTFDll.read.1u.tlog  LandXML2glTFDll.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
LandXML2glTF/LandXML2glTFDll/source/: LandXML2glTFDll.cpp  LandXMLModel.cpp  LandXMLModel2glTF.cpp  dllmain.cpp
LandXML2glTF/LandXML2glTFDll/source/Helpers/: LXParserHelper.cpp  MathHelper.cpp
LandXML2glTF/LandXML2glTFDll/source/Readers/: LXParser.cpp
LandXML2glTF/LandXML2glTFDll/source/Writers/: GLTFWriter.cpp
LandXML2glTF/XCopyFiles/: XCopyFiles.vcxproj
Open3DTest/: re-explorer.bat
Open3DTest/NCraftImageGen/inc/: NCraftClassFactory.h  NCraftImageGen.h  NCraftImageGenMenu.h  NCraftImageGenMenuGUID.h  Priv.h
Open3DTest/NCraftImageGen/source/: NCraftClassFactory.cpp  NCraftImageGen.cpp  NCraftImageGen.def  NCraftImageGenMenu.cpp
Open3DTest/inc/: CloudWranglerApp.h  EditWindow.h  RenderToImage.h  framework.h
Open3DTest/inc/Tools/: PointCloudCommon.h  PointCloudIO.h
Open3DTest/inc/shaders/: pointCloudShaders.h
Open3DTest/src/: CloudWrangler.cpp  EditWindow.cpp  RenderToImage.cpp  TestVisualizer.cpp
Open3DTest/src/Tools/: PointCloudCommon.cpp  PointCloudIO.cpp
