cmake_minimum_required(VERSION 3.2)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -D_DEBUG -DFEATURE_ASSERTS_ENABLED")
set(CMAKE_OSX_DEPLOYMENT_TARGET 11.0)

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

project(LANDXML2GLTF)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/GLTFSDK")
add_subdirectory(LandXML2glTFDll)
add_subdirectory(LXML2glTF)

